# Python-Project-Templates

./: README.md
Custom_Template/: copier.yml  create.bat  create.sh  create_new_project.bat
Custom_Template/template/: .pre-commit-config.yaml  README.md  pyproject.toml
Custom_Template/template/src/{{project_name.lower().replace('-', '_')}}/: __init__.py
Custom_Template/template/tests/: test_version.py
